Add public minified version

--- a/index.html
+++ b/index.html
@@ -5,35 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <title>Golf 6 1.6 TDI 2011 Cluj-Napoca</title>
 
-
     <link rel="icon" sizes="32x32" href="favicon.png">
     <meta property="og:image" content="https://golf6devanzare.ro/images/front_photo.jpg">
 
-    <!-- CSS styles -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.5.1/css/swiper.min.css"
-          integrity="sha256-DBYdrj7BxKM3slMeqBVWX2otx7x4eqoHRJCsSDJ0Nxw=" crossorigin="anonymous"/>
-    <link rel="stylesheet" href="styles/normalize.css">
-    <link rel="stylesheet" href="styles/style.css">
-
-    <!-- JS libraries -->
-    <script src="https://cdn.jsdelivr.net/npm/animejs@3.1.0/lib/anime.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/vanilla-lazyload@12.4.0/dist/lazyload.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.5.1/js/swiper.min.js"
-            integrity="sha256-4sETKhh3aSyi6NRiA+qunPaTawqSMDQca/xLWu27Hg4=" crossorigin="anonymous"></script>
-
-    <!-- JS files -->
-    <script src="scripts/sweetalert.min.js"></script>
-    <script src="scripts/imagesloaded.min.js"></script>
-    <script src="scripts/animations.js"></script>
-    <script src="scripts/utils.js"></script>
-    <script src="scripts/header.js"></script>
-    <script src="scripts/rotate.js"></script>
-    <script src="scripts/three_dimensional.js"></script>
-    <script src="scripts/slider.js"></script>
-    <script src="scripts/lazy_load.js"></script>
-    <script src="scripts/live_mileage.js"></script>
-    <script src="scripts/fixed_table.js"></script>
-    <script src="scripts/app.js"></script>
+    <link rel="stylesheet" href="minified/all.minified.css">
+    <script src="minified/all.minified.js"></script>
 </head>
 <body>
 
