Add sold watermark

--- a/source/index.html
+++ b/source/index.html
@@ -915,5 +915,12 @@
            title="Email golf6devanzare@gmail.com" target="_blank">golf6devanzare@gmail.com</a>
     </div>
 </section>
+
+<!--
+<div id="watermark">
+    <span>VÂNDUT!</span>
+</div>
+-->
+
 </body>
 </html>
