Update notsold.html with correct base href

--- a/notsold.html
+++ b/notsold.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <base href="https://golf6devanzare.ro">
+    <base href="https://golf6devanzare.ro/notsold.html">
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-155925219-1"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
@@ -28,7 +28,7 @@
         <span class="header-logo"> Golf 6</span>
         <div id="top-menu">
             <div class="menu-list">
-                <a href="#first-section" class="selected">Home</a>
+                <a href="notso#first-section" class="selected">Home</a>
                 <a href="#three-dimensional">Vizualizare 360&#176;</a>
                 <a href="#style-packet">Dotări</a>
                 <a href="#history">Istoric</a>
