--- a/notsold.html
+++ b/notsold.html
@@ -28,7 +28,7 @@
         <span class="header-logo"> Golf 6</span>
         <div id="top-menu">
             <div class="menu-list">
-                <a href="notso#first-section" class="selected">Home</a>
+                <a href="#first-section" class="selected">Home</a>
                 <a href="#three-dimensional">Vizualizare 360&#176;</a>
                 <a href="#style-packet">Dotări</a>
                 <a href="#history">Istoric</a>
