--- a/notsold.html
+++ b/notsold.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <base href="https://golf6devanzare.ro/notsold.html">
+    <base href="https://micku7zu.github.io/golf6devanzare.ro/notsold.html">
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-155925219-1"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
